src/main/java/com/example/movieapp/error/exceptions/ReviewNotFoundException.java
package com.example.movieapp.error.exceptions;

public class ReviewNotFoundException extends RuntimeException {

    public ReviewNotFoundException(String message) {

        super(message);
    }
}

